# LIA

./: .gitignore  CMakeLists.txt  README.md  compilar_y_ejecutar.bat
.kiro/specs/lia-lexer/: .config.kiro  requirements.md
docs/: AFD_LIA.md  matriz_transicion.md  mejoras_futuras.md
ejemplos/: ejemplo1.lia  ejemplo2.lia  ejemplo_con_errores.lia  ejemplo_sintaxis_correcta.lia  ejemplo_sintaxis_error.lia
src/: Error.cpp  Error.h  ErrorSintactico.cpp  ErrorSintactico.h  Lexer.cpp  Lexer.h  MainWindow.cpp  MainWindow.h  Parser.cpp  Parser.h  Token.cpp  Token.h  main.cpp
